--- a/scss/shortcodes/_image.scss
+++ b/scss/shortcodes/_image.scss
@@ -1,120 +1,119 @@
-.wvc-single-image{
+.wvc-single-image {
 	position: relative;
 	margin: 0;
 	padding: 0;
 
 	margin: 0 auto;
 
-	img{
+	img {
 		width: auto;
 		max-width: 100%;
 		backface-visibility: hidden;
 	}
 }
 
-.wvc-single-image-full-width{
-	img{
+.wvc-single-image-full-width {
+	img {
 		width: 100%;
 	}
 }
 
-.wvc-single-image-title{
+.wvc-single-image-title {
 	margin-bottom: 15px;
 }
 
-.wvc-single-image-caption{
+.wvc-single-image-caption {
 	margin-top: 20px;
 }
 
 /* Shape */
-.wvc-single-image-shape-rounded{
-	border-radius:4px;
+.wvc-single-image-shape-rounded {
+	border-radius: 4px;
 	img,
 	.wvc-img,
-	.wvc-single-image{
-		border-radius:4px;
+	.wvc-single-image {
+		border-radius: 4px;
 	}
 }
 
-.wvc-single-image-shape-circle{
-	border-radius:999em;
+.wvc-single-image-shape-circle {
+	border-radius: 999em;
 	img,
 	.wvc-img,
-	.wvc-single-image{
-		border-radius:999em;
+	.wvc-single-image {
+		border-radius: 999em;
 	}
 }
 
 /* Alignement */
-.wvc-single-image-alignement-left{
+.wvc-single-image-alignement-left {
 	text-align: left;
 	margin-left: 0;
-	.wvc-single-image{
+	.wvc-single-image {
 		margin-left: 0;
 	}
 }
 
-.wvc-single-image-alignement-center{
+.wvc-single-image-alignement-center {
 	text-align: center;
 }
 
-.wvc-single-image-alignement-right{
+.wvc-single-image-alignement-right {
 	text-align: right;
 	margin-right: 0;
 
-	.wvc-single-image{
+	.wvc-single-image {
 		margin-right: 0;
 	}
 }
 
 /* Border */
-.wvc-single-image-border-yes img{
+.wvc-single-image-border-yes img {
 	border: 1px solid;
 	padding: 4px;
 }
 
 /* Shadow */
-.wvc-single-image-shadow-yes{
-	img{
-
+.wvc-single-image-shadow-yes {
+	img {
 	}
 }
 
 /* Box shadow */
-.wvc-font-dark{
-	.wvc-single-image-shadow-yes{
+.wvc-font-dark {
+	.wvc-single-image-shadow-yes {
 		.wvc-img,
-		.wvc-si-img-inner{
-			box-shadow: 0px 5px 30px 0px rgba(0,0,0,.22);
+		.wvc-si-img-inner {
+			box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.22);
 		}
 	}
 
-	.wvc-single-image-border-yes{
+	.wvc-single-image-border-yes {
 		.wvc-img,
-		.wvc-si-img-inner{
-			border-color:rgba(0,0,0,.22);
+		.wvc-si-img-inner {
+			border-color: rgba(0, 0, 0, 0.22);
 		}
 	}
 }
 
-.wvc-font-light{
+.wvc-font-light {
 	.wvc-single-image-shadow-yes {
 		.wvc-img,
-		.wvc-si-img-inner{
-			box-shadow: 0px 5px 30px 0px rgba(0,0,0,.55);
+		.wvc-si-img-inner {
+			box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.55);
 		}
 	}
 
-	.wvc-single-image-border-yes{
+	.wvc-single-image-border-yes {
 		.wvc-img,
-		.wvc-si-img-inner{
-			border-color:rgba(0,0,0,.55);
+		.wvc-si-img-inner {
+			border-color: rgba(0, 0, 0, 0.55);
 		}
 	}
 }
 
 /* Overlay */
-.wvc-single-image-overlay{
+.wvc-single-image-overlay {
 	padding: 50px;
 	position: absolute;
 	width: 100%;
@@ -127,9 +126,8 @@
 	align-items: center;
 }
 
-.wvc-single-image-overlay-true{
-	
-	.wvc-si-link{
+.wvc-single-image-overlay-true {
+	.wvc-si-link {
 		display: block;
 		position: absolute;
 		z-index: 1;
@@ -139,35 +137,43 @@
 		height: 100%;
 	}
 
-	.wvc-single-image-overlay{
+	.wvc-single-image-overlay {
 		opacity: 0;
-		transition: opacity .4s ease;
+		transition: opacity 0.4s ease;
 	}
 
-	&:hover{
-		.wvc-single-image-overlay{
+	&:hover {
+		.wvc-single-image-overlay {
 			opacity: 1;
 		}
 	}
 }
 
-.wvc-single-image-overlay-content{
+.wvc-is-mobile {
+	.wvc-single-image-overlay-true {
+		.wvc-si-link {
+			position: relative;
+		}
+	}
+}
+
+.wvc-single-image-overlay-content {
 	position: relative;
 	z-index: 15;
 	width: 100%;
 }
 
-.wvc-single-image-overlay-title{
+.wvc-single-image-overlay-title {
 	width: 100%;
 	margin-bottom: 5px;
 }
 
-.wvc-banner-tagline{
+.wvc-banner-tagline {
 	width: 100%;
 }
 
-.wvc-is-mobile{
-	.wvc-single-image-overlay{
+.wvc-is-mobile {
+	.wvc-single-image-overlay {
 		display: none;
 	}
 }
